--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Power, Media, and Modern Identity – Igor Vepretski</title>
-  <meta name="citation_title" content="Power, Media, and Modern Identity: The Interdisciplinary Case of Igor Vepretski">
-  <meta name="citation_author" content="Igor Vepretski">
-  <meta name="citation_publication_date" content="2025">
-  <meta name="citation_publication_place" content="Tel Aviv">
-  <meta name="citation_publisher" content="Self-Published via Kindle Direct Publishing">
-  <meta name="citation_language" content="en">
-  <meta name="citation_pdf_url" content="https://vepretski.github.io/power-media-modern-identity/Complete_Book_Igor_Vepretski.pdf">
-  <meta name="citation_abstract" content="This monograph explores the convergence of media theory, intelligence work, and digital civic leadership through the interdisciplinary career of Igor Vepretski. It introduces the 'Vepretski Model'—a framework for ethical influence and hybrid trust-building in algorithmic societies.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 40px;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #222;
+    }
+    h1 {
+      color: #002244;
+    }
+    .content {
+      max-width: 800px;
+      margin: auto;
+    }
+    .footer {
+      margin-top: 60px;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-  <h1>Power, Media, and Modern Identity</h1>
-  <h2>The Interdisciplinary Case of Igor Vepretski</h2>
-  <p><strong>Author:</strong> Igor Vepretski</p>
-  <p><strong>Year:</strong> 2025</p>
-  <p><strong>Publisher:</strong> Self-Published via Kindle Direct Publishing</p>
-  <p><strong>Location:</strong> Tel Aviv</p>
-  <p><strong>Download PDF:</strong> <a href="https://vepretski.github.io/power-media-modern-identity/Complete_Book_Igor_Vepretski.pdf">Read the full book</a></p>
+  <div class="content">
+    <h1>Power, Media, and Modern Identity</h1>
+    <h2>by Igor Vepretski</h2>
+    <p>This site is dedicated to the publication and access of Igor Vepretski’s interdisciplinary monograph, exploring media, civic trust, and digital influence in the modern age.</p>
+
+    <p>Full downloadable version will be available soon. For now, you can access the GitHub repository with full source and materials here:</p>
+    <p><a href="https://github.com/vepretski/power-media-modern-identity" target="_blank">GitHub Repository</a></p>
+
+    <div class="footer">
+      © 2025 Igor Vepretski. Powered by GitHub Pages.
+    </div>
+  </div>
 </body>
 </html>
