Fix citation PDF URL

--- a/GoogleScholar_Landing_IgorVepretski.html
+++ b/GoogleScholar_Landing_IgorVepretski.html
@@ -9,7 +9,7 @@
     <meta name="citation_publication_place" content="Tel Aviv">
     <meta name="citation_publisher" content="Self-Published via Kindle Direct Publishing">
     <meta name="citation_language" content="en">
-    <meta name="citation_pdf_url" content="https://linktr.ee/igor.vepretski">
+    <meta name="citation_pdf_url" content="Complete_Book_Igor_Vepretski.pdf">
     <meta name="citation_abstract" content="This monograph explores the convergence of media theory, intelligence work, and digital civic leadership through the interdisciplinary career of Igor Vepretski. It introduces the 'Vepretski Model'—a framework for ethical influence and hybrid trust-building in algorithmic societies.">
 </head>
 <body>
